<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">快乐益</string>
    <string name="action_settings">Settings</string>
    <string name="main_happyi">首页</string>
    <string name="main_organization">机构</string>
    <string name="main_me">我的</string>
    <string name="happyi_introduce">用户注册协议</string>
    <string name="web_error">404 error</string>
    <string name="net_error">请求失败，请检查网络</string>
    <string name="Send_the_following_pictures">发送以下图片？</string>
    <string name="button_send">发送</string>
    <string name="scan_text">将二维码放入框内, 即可自动扫描</string>
    <string name="password">密码为6-20位字母+数字</string>
    <string name="registration_Agreement">同意快乐益注册协议</string>
    <string name="edit_Account_hint">请输入手机号码</string>
    <string name="edit_Password_hint">请输入密码</string>
    <string name="remember_passwords">记住密码</string>
    <string name="forget_password">忘记密码</string>
    <string name="btn_Landing">登录</string>
    <string name="tv_Registered">注册</string>
    <string name="third_party_landing">第 三 方 登 录</string>
    <string name="get_verification_code">获取验证码</string>
    <string name="enter_phone_number">请输入手机号码</string>
    <string name="enter_email">请输入邮箱</string>
    <string name="email_error">邮箱格式不正确</string>
    <string name="phone_number_error">手机号码格式不正确</string>
    <string name="enter_name">请输入姓名</string>
    <string name="enter_correct_nickname">请输入正确的昵称</string>
    <string name="enter_age">请输入年龄</string>
    <string name="enter_job">请输入职业</string>
    <string name="identity_remark">注：因本次活动需要购买保险，请输入正确的身份证号</string>
    <string name="join_remark">团队报名人数过多，请前往PC端：www.happiyi.com报名。</string>
    <string name="enter_password">请输入密码</string>
    <string name="enter_password_again">请再次输入密码</string>
    <string name="two_inconsistent">两次输入密码不一致</string>
    <string name="verification_code_hint">请输入验证码</string>
    <string name="verification_code_error">请输入手机接收到的验证码</string>
    <string name="phone_number">请输入注册手机号码</string>
    <string name="enter_identity_number">请输入身份证号码</string>
    <string name="enter_pic">没有选择要上传的图片</string>
    <string name="network_isnot_available">网络不可用</string>
    <string name="User_name_cannot_be_empty">用户名不能为空！</string>
    <string name="Password_cannot_be_empty">密码不能为空！</string>
    <string name="not_choose_agreement">请认真阅读用户协议，并同意该协议</string>
    <string name="personal_center">个人中心</string>
    <string name="ngo_personal_center">NGO个人中心</string>
    <string name="edit_Information">编辑个人信息</string>
    <string name="system_settings">设置</string>
    <string name="change_password">修改密码</string>
    <string name="about_happyi">关于快乐益</string>
    <string name="enter_idea">请输入你的宝贵意见</string>
    <string name="thanks_idea">感谢你提供宝贵意见</string>
    <string name="change_success">修改成功</string>
    <string name="shareto">分享到</string>
    <string name="myParty">我的活动</string>
    <string name="myFans">我的粉丝</string>
    <string name="organization">机构</string>
    <string name="organization_detail">机构详情</string>
    <string name="auth_manage">认证管理</string>
    <string name="no_auth_party">抱歉，没有需要认证的活动</string>
    <string name="Version_number_is_wrong">版本号错误</string>
    <string name="pull_to_load_more">上拉加载更多</string>
    <string name="pull_to_refresh">下拉刷新</string>
    <string name="loading">正在加载中···</string>
    <string name="party_nostart">未开始</string>
    <string name="party_in">进行中</string>
    <string name="party_done">已完成</string>
    <string name="party">活动</string>
    <string name="party_process">活动进行中</string>
    <string name="party_end">活动已结束</string>
    <string name="party_already_end">已结束</string>
    <string name="party_join_end">报名已结束</string>
    <string name="party_intro">活动说明</string>
    <string name="party_scene">活动现场</string>
    <string name="party_people">参与人员</string>
    <string name="error_family_join">未获取到家庭报名信息，请选择其他报名方式</string>
    <string name="fund">基金会</string>
    <string name="ngo">机构</string>
    <string name="myCollect">我的关注</string>
    <string name="cancel_collect">取消关注</string>
    <string name="average_fee">人均费用</string>
    <string name="join_people">报名人员</string>
    <string name="comment">评价</string>
    <string name="no_comment">暂时还没有人评论</string>
    <string name="fans">粉丝</string>

    <!-- WXPayEntryActivity -->
    <string name="pay_result_tip">这个界面用于显示第三方app通过微信支付的结果</string>
    <string name="pay_result_callback_msg" formatted="false">微信支付结果：%s</string>
    <string name="search">搜索</string>
    <string name="refund_way">请选择退款方式</string>
    <string name="get_access_token_fail" formatted="false">获取access token失败，原因%s</string>
    <string name="input_ali_account">请输入支付宝账号</string>
    <string name="bank">银行卡账号</string>
    <string name="input_bank_account">银行卡号</string>
    <string name="owner">持卡人名称</string>
    <string name="bank_name">开户行名称</string>
    <string name="app_tip">提示</string>
    <string name="getting_access_token">正在获取access token...</string>
    <string name="get_access_token_succ">获取access token成功</string>
    <string name="getting_prepayid">正在获取预支付订单...</string>
    <string name="get_prepayid_succ">获取prepayid成功</string>
    <string name="get_prepayid_fail" formatted="false">获取prepayid失败，原因%s</string>
    <string name="account_ali">请输入支付宝账号</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="net_state">当前网络状态似乎遇到问题</string>
    <string name="route_choose">路线选择</string>
    <string name="route_plan">路径规划</string>
    <string name="my_position">我的位置</string>
    <string name="QRcode">立即支付</string>
    <string name="cancel_party">取消活动</string>
    <string name="cancel">取消</string>
    <string name="happyi">快乐益</string>
    <string name="discription">请设置让利用户标准</string>
    <string name="description">请设置用户让利标准</string>
</resources>
