<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="10dp">
    <!--这个是原生活动详情页面的tab-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:gravity="center"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/tab_party_intro"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:background="@color/orangered"
            android:clickable="true"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_party_intro"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/party_intro"
                android:textColor="@color/happyi_content_color" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/tab_party_scene"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_marginLeft="1dp"
            android:layout_weight="1"
            android:background="@color/white"
            android:clickable="true"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_party_scene"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/party_scene"
                android:textColor="@color/happyi_content_color" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/tab_party_people"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_marginLeft="1dp"
            android:layout_weight="1"
            android:background="@color/white"
            android:clickable="true"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_party_people"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/party_people"
                android:textColor="@color/happyi_content_color" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/tab_party_comment"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_marginLeft="1dp"
            android:layout_weight="1"
            android:background="@color/white"
            android:clickable="true"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_party_comment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/comment"
                android:textColor="@color/happyi_content_color" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>