<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/party_tab"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <!--这个是我的活动的tab-->
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="70dp">

        <LinearLayout
            android:id="@+id/tab_party_nostart"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:background="@color/orangered"
            android:clickable="true"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_party_nostart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:src="@drawable/icon_party_nostart_selected" />

            <TextView
                android:id="@+id/tv_party_nostart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/party_nostart"
                android:textColor="@color/party_text_color" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/tab_party_in"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:clickable="true"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_party_in"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:src="@drawable/icon_party_in" />

            <TextView
                android:id="@+id/tv_party_in"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/party_in"
                android:textColor="@color/party_text_color" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/tab_party_done"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:clickable="true"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_party_done"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:src="@drawable/icon_party_done" />

            <TextView
                android:id="@+id/tv_party_done"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/party_done"
                android:textColor="@color/party_text_color" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>