<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/party_tab"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="200dp"
        android:layout_height="@dimen/height_top_bar"
        android:layout_centerInParent="true">

        <LinearLayout
            android:id="@+id/tab_party_nostart"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:clickable="true"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_party_nostart"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/party_nostart"
                android:textColor="@color/party_text_color"
                android:textSize="@dimen/font_size_big" />

            <TextView
                android:id="@+id/line1"
                android:layout_width="match_parent"
                android:layout_height="3dp"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="12dp"
                android:background="@color/orangered"
                android:visibility="invisible" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/tab_party_in"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:clickable="true"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_party_in"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/party_in"
                android:textColor="@color/party_text_color"
                android:textSize="@dimen/font_size_big" />

            <TextView
                android:id="@+id/line2"
                android:layout_width="match_parent"
                android:layout_height="3dp"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="12dp"
                android:background="@color/orangered"
                android:visibility="invisible" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/tab_party_done"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:clickable="true"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_party_done"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/party_done"
                android:textColor="@color/party_text_color"
                android:textSize="@dimen/font_size_big" />

            <TextView
                android:id="@+id/line3"
                android:layout_width="match_parent"
                android:layout_height="3dp"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="12dp"
                android:background="@color/orangered"
                android:visibility="invisible" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>